	you use the 'package' or 'lib.loc' arguments.

	data() now lists datasets, and not just names which data() accepts.

    o   Dataset 'phones' has been renamed to 'WorldPhones'.

    o	Datasets 'sunspot.month' and 'sunspot.year' are available
        separately but not via data(sunspot) (which is used by package
        lattice to retrieve a dataset 'sunspot').

    o	Package names must now be given exactly in library() and
    	require(), regardless of whether the underlying file system is
    	case-sensitive or not.


NEW FEATURES

    o	There is a new atomic vector type, class "raw".	 See ?raw for
	full details including the operators and utility functions provided.

    o	The default barplot() method by default uses a
	gamma-corrected grey palette (rather than the heat color
	palette) for coloring its output when given a matrix.

    o	The 'formula' method for boxplot() has a 'na.action' argument,
	defaulting to 'na.pass'.  This is mainly useful if the response
	is a matrix when the previous default of 'na.omit' would omit
	entire rows.  (Related to PR#6846.)

	boxplot() and bxp() now obey global 'par' settings and also
	allow the specification of graphical options in more detail,
	compatibly with S-PLUS (fulfilling wishlist entry PR#6832)
	thanks to contributions from Arni Magnusson.  For consistency,
	'boxwex' is not an explicit argument anymore.

    o	There is now a coef() method for summaries of "nls" objects.

    o	cumsum/prod/max/min() now preserve names.

    o	data(), .path.packages() and .find.packages() now interpret
	package = NULL to mean all loaded packages.

    o	data.frame() and its replacement methods remove the names from
	vector columns.	 Using I() will ensure that names are
	preserved.

    o	data.frame(check.names = TRUE) (the default) enforces unique
	names, as S does.

    o	.Defunct() now has 'new' and 'package' arguments like those of
	.Deprecated().

    o	The plot() method for "dendrogram" objects now respects many more